commit before cmake changes. 100% compilation but kernel missing

--- a/include/jcdp/CMakeLists.txt
+++ b/include/jcdp/CMakeLists.txt
@@ -9,7 +9,8 @@ set(_local_headers
   ${CMAKE_CURRENT_SOURCE_DIR}/jacobian_chain.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/jacobian.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/operation.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/sequence.hpp)
+  ${CMAKE_CURRENT_SOURCE_DIR}/sequence.hpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/deviceSequence.hpp)
 
 # Setup header-only IWYU target
 header_only_iwyu_targets("jcdp"
